@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.5 ===
+* Updated interface to conform lsp-r3d-iface.
 * Updated build scripts.
 
 === 1.0.4 ===
